--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/About">About</a></li>
+		        	<li><a href="/About">About Me</a></li>
 	        		<li><a href="/CV">CV</a></li>
 	        		<li><a href="/Research">Research</a></li>
 				<li><a href="/Photography">Photography</a></li>
