--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/About">About Me</a></li>
-	        		<li><a href="/CV">CV</a></li>
-	        		<li><a href="/Research">Research</a></li>
-				<li><a href="/Photography">Photography</a></li>
-				<li><a href="/Community">Community</a></li>
+		        	<li><a href="/about">About Me</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/research">Research</a></li>
+				<li><a href="/photography">Photography</a></li>
+				<li><a href="/community">Community</a></li>
 				
 	    		</ul>
 			</nav>
