--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:codybarnett@ku.edu">Email</a></li>
-	        		<li><a href="https://github.com/Cbarnett207">Github</a></li>
-				<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ">Google Scholar</a></li>
-				<li><a href="https://twitter.com/CodyTBarnett">Twitter</a></li>
+	        		<div align="center"><li><a href="mailto:codybarnett@ku.edu">Email</a></li>
+	        			<li><a href="https://github.com/Cbarnett207">Github</a></li>
+					<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ">Google Scholar</a></li>
+					<li><a href="https://twitter.com/CodyTBarnett">Twitter</a></li>
 				</ul>
 			</footer>
 		</body>
