update home page formatting
center text and add a banner image to website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,13 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
+			<img width="100%" src="/images/templefjorden_3_clip.jpg">
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
 			<nav>
-	    		<ul>
+	    		<div align="right"><ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About Me</a></li>
 	        		<li><a href="/cv">CV</a></li>
