--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		</head>
 		<body>
 			<nav>
-	    		<div align="right"><ul>
+	    		<div align="center"><ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About Me</a></li>
 	        		<li><a href="/cv">CV</a></li>
