--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/research">Research</a></li>
 				<li><a href="/photography">Photography</a></li>
-				<li><a href="/community">Community</a></li>
+				<li><a href="/community">Polar Community</a></li>
 				
 	    		</ul>
 			</nav>
