--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,10 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<div align="center"><li><a href="mailto:codybarnett@ku.edu">Email</a></li>
-					<li><a href="https://github.com/Cbarnett207"><font size="0.5cm">Github</font></a></li>
-					<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ"><img src="/images/pngkit_google-logo-2015-png_329634.png" width="5%" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
-					<li><a href="https://twitter.com/CodyTBarnett">Twitter</a></li>
+	        		<div align="center"><li><a href="mailto:codybarnett@ku.edu"><font size="2cm">Email</font></a></li>
+					<li><a href="https://github.com/Cbarnett207"><font size="2cm">Github</font></a></li>
+					<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ"><img src="/images/pngkit_google-logo-2015-png_329634.png" size="2cm" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
+					<li><a href="https://twitter.com/CodyTBarnett"><font size="2cm">Twitter</font></a></li>
 					
 			</div>
 				</ul>
