--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,10 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<div align="center"><li><a href="mailto:codybarnett@ku.edu"><font size="2cm">Email</font></a></li>
-					<li><a href="https://github.com/Cbarnett207"><img src="/images/GitHub_logo.png" width="75pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
-					<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ"><img src="/images/Google_Scholar_Logo.png" width="150pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
-					<li><a href="https://twitter.com/CodyTBarnett"><img src="/images/Twitter_logo.png" width="40pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li></div>
+	        		<div align="center"><li><a href="mailto:codybarnett@ku.edu" style="text-decoration:none"><font size="2cm">Email</font></a></li>
+					<li><a href="https://github.com/Cbarnett207" style="text-decoration:none"><img src="/images/GitHub_logo.png" width="75pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
+					<li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F4UgN5ueqeUOfjsqjmC7_p0A4dthMC9-y24TSlu-DjdC71s1ohvj_F66HKdx54Srv8PvgNy4anPrpieR786HQYsx5WQDQ&user=_cGjc70AAAAJ" style="text-decoration:none"><img src="/images/Google_Scholar_Logo.png" width="150pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li>
+					<li><a href="https://twitter.com/CodyTBarnett" style="text-decoration:none"><img src="/images/Twitter_logo.png" width="40pt" alt="GitHub logo"/>&nbsp;&nbsp;</a></li></div>
 					
 					
 			</div>
