--- a/_layouts/about_default.html
+++ b/_layouts/about_default.html
@@ -20,22 +20,27 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
-        .container__texts{
-	      width:80%;
-        }
+				
+				.container{
+				width:100%;
+				display:flex;
+				}
+        
+				.container__texts{
+	     			 width:80%;
+        			}
 
-        .container__img{
-	      width:20%;
-	      position:relative;
-        }
+        			.container__img{
+	   			width:20%;
+	     			position:relative;
+        			}
 
-        .container__img img{
-	      height:100%;
-	      width:auto;
-	      display:block;
-	      position:absolute;
-        }
+        			.container__img img{
+	 	     		height:100%;
+	      			width:auto;
+	      			display:block;
+	      			position:absolute;
+        			}
 			
 			</div><!-- /.container -->
 			<footer>
