--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-a:link {
+a {
     color: #34B5EA;
     text-decoration: none;
 }
