--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-a {
-    color: red;
+a:link {
+    color: #34B5EA;
     text-decoration: none;
 }
 a:hover {
