--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,11 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 a:link {
-    color: #78AEC4;
+    color: #5E899A;
     text-decoration: none;
 }
 a:visited {
-  color: #78AEC4;
+  color: #5E899A;
 }
 a:hover {
     color: blue;
