--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<img width="100%" src="/images/templefjorden_3_clip.jpg">
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/about_page.css">
+			<link rel="stylesheet" type="text/css" href="/css/new_main.css">
 		</head>
 		<body>
 			<nav>
